# node-aho-corasick

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  makefile  package-lock.json  package.json  scanner.js  wasm-implementation.rs
.metals/: metals.lock.db
node/: .gitignore  index.js  js.js  package-lock.json  package.json  profile.sh  regex.js  wasm.js  wasm.txt
node/data/: data.txt  helloWorld.txt  words.txt  wordsTest.txt
results/naive/: js.txt  notes.md  wasm.txt
results/no_copies/: wasm.txt
src/: aho_corasick.rs  lib.rs  scan-lib.rs  xyzzy.rs
src/aho/aho_corasick/: automaton.rs  constants.rs  context.rs
src/aho_corasick/: automaton.rs
src/xyzzy/aho_corasick/: automaton.rs  constants.rs  mod.rs
