[package]
name = "aho-corasick"
version = "0.1.0"
authors = ["Bruce A. MacNaughton <bmacnaughton@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
napi = "1"
napi-derive = "1"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
